--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -56,14 +56,19 @@
 	<li> Alpha port has been tuned for the EV6 processor and has an
 	optimized expansion of memcpy/bzero.  The Alpha port now uses
 	the Haifa scheduler.</li>
-	<li> RS6000/PowerPC: EGCS 1.1 includes support for the Power64
-	architecture and aix4.3 support.  The RS6000/PowerPC port now
+	<li> RS6000/PowerPC: support for the Power64
+	architecture and AIX 4.3.  The RS6000/PowerPC port now
 	uses the Haifa scheduler.</li>
 	<li> x86: Alignment of static store data and jump targets is per
 	Intel recommendations now.  Various improvements throughout the
-	x86 port to improve performance on Pentium processors.  Conditional
-	move support has been fixed and enabled for PPro processors.
-	The x86 port also better supports 64bit operations now.</li>
+	x86 port to improve performance on Pentium processors (including
+        improved epilogue sequences for Pentium chips and backend
+        improvements which should help register allocation on all x86
+        variants.  Conditional move support has been fixed and enabled for
+        PPro processors.
+	The x86 port also better supports 64bit operations now.
+        Unixware 7, a System V Release 5 target, is now supported and
+        SCO OpenServer targets can support GAS.</li>
 	<li> MIPS has improved multiply/multiply-add support and now includes
 	mips16 ISA support.</li>
 	<li> M68k has many micro-optimizations and Coldfire fixes.</li>
