--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -909,10 +909,8 @@ place.  It belongs in the official manual.  There is a <a
 href="http://gcc.gnu.org/onlinedocs/gccint/Trees.html">C/C++ specific manual</a>, and a
 <a href="http://www.ncsa.uiuc.edu/~wendling/tree.html">third party,
 general manual</a>.  Both of them are incomplete.  Several people have
-written partial manuals on implementing new front ends: look at <a
-href="http://members.wri.com/johnnyb/compilers/">The GNU Compiler
-Writer's Jump Point</a> and our <a
-href="../readings.html">readings list</a>.</p>
+written partial manuals on implementing new front ends: look at our
+<a href="../readings.html">readings list</a>.</p>
 
 <p>Michael Dupont &lt;<a
 href="mailto:mdupont777@yahoo.com">mdupont777@yahoo.com</a>&gt;
