--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -22,12 +22,12 @@ the bug is a regression.</li>
 system about a reported bug:</p>
 <ol>
 <li>If the bug is a segmentation fault in the compiler,
-<a href="bugs/segfault.html">provide information about its location</a>.
+<a href="segfault.html">provide information about its location</a>.
 </li>
-<li><a href="bugs/minimize.html">Minimize the test case</a>.</li>
+<li><a href="minimize.html">Minimize the test case</a>.</li>
 <li>Try the test case with earlier and later versions of GCC to
 determine which versions it affects and whether it is a regression.
-If it is a regression, <a href="bugs/reghunt.html">identify the
+If it is a regression, <a href="reghunt.html">identify the
 patch</a> that introduced it.</li>
 </ol>
 
