Update URL of 3B2 FAQ.  Remove broken (and redundant) URL for c.s.c++ FAQ. Remove broken mn102, mn103, and MIPS16 URLs.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -177,7 +177,6 @@ names.
   <ul>
     <li><a href="http://www.mips.com/publications/index.html">
 	http://www.mips.com/publications/index.html</a></li>
-    <li><a href="http://www.necel.com/home.nsf/ViewAttachments/U13569EJ4V1UM00/$file/U13569EJ4V1UM00.pdf">
         MIPS16 information from the Vr4121</a> Documentation.</li>
   </ul>
  </li>
@@ -200,14 +199,12 @@ names.
  
  <li>mn10200
   <br />Manufacturer: <a href="http://www.psdc.com/">Matsushita</a>
-  <br /><a href="http://psdc.com/micros/mn102.htm">Chip Documentation</a>
   <br />GDB includes a simulator.
  </li>
  
  <li>mn10300
   <br />Manufacturer: <a href="http://www.psdc.com/">Matsushita</a>
   <br />Alternate chip name: AM30
-  <br /><a href="http://psdc.com/micros/mn103.htm">Chip Documentation</a>
   <br />GDB includes a simulator.
  </li>
  
@@ -348,7 +345,6 @@ names.
   <li><a href="http://www.dkuug.dk/jtc1/sc22/wg21/">ISO Committee homepage
       (defects list, etc)</a></li>
   <li><a href="http://www.comeaucomputing.com/iso/">Comeau reflector</a></li>
-  <li><a href="http://www.research.att.com/~austern/csc/faq.html">C++ standards FAQ</a></li>
 </ul>
 
 <ul>
@@ -546,7 +542,7 @@ Below is the list of ports that GCC used to support.
 
   <li>we32k
   <br />Manufacturer: <a href="http://www.att.com">AT&amp;T</a>
-  <br /><a href="http://cua6.csuohio.edu/~bob/3b2faq.html">AT&amp;T 3B2 FAQ</a>
+  <br /><a href="http://www.unixwiz.net/3b2/3b2faq.html">AT&amp;T 3B2 FAQ</a>
   </li>
  
 </ul>
