Remove broken link related to Fijuitsu FR30.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -547,10 +547,7 @@ improvement work were and will be of great use.
 Nick Clifton of Cygnus Solutions has donated support for the Fujitsu
 FR30 processor.  The FR30 is a low-cost 32bit cpu intended for larger
 embedded applications.  It has a simple load/store architecture, 16
-general registers and a variable length instruction set.  Additional
-details about the FR30 can be found at
-<a href="http://www.fmap.com.sg/products/mcu_fr30.htm">Fujitsu's web
-site</a>.
+general registers and a variable length instruction set.
 </dd>
 
 <dt><b>September 20, 1999</b></dt>
