* htdocs/readings.html : Add link to "A Detailed Description of the         GNU Ada Run Time"

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -403,6 +403,8 @@ names.
 
 <ul>
   <li><a href="http://www.gnat.com/">Ada Core Technologies</a></li>
+  <li><a href="http://www.iuma.ulpgc.es/users/jmiranda/">A Detailed 
+  Description of the GNU Ada Run Time</a></li>
   <li><a href="ftp://ftp.cs.nyu.edu/pub/gnat/">GNAT sources and
   binaries</a></li>
   <li><a href="http://www.gnuada.org/alt.html">Ada for GNU/Linux Team</a></li>
