Remove references to benchresults

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -63,12 +63,11 @@ all mailing lists.
 <option
 value="g/a|g/b|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/o|g/p|g/r|g/s|g/t|g/w">
 all web pages.
-<!-- We restrict to g/bu(gs.html) g/th(anks.html) and
-     g/ti(meline.html), excluding testresults and benchresults.
+<!-- We restrict to g/th(anks.html) and g/ti(meline.html), excluding testresults.
      FIXME: Better wording.  -->
 </option>
 <option
-value="g/a|g/bu|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/o|g/p|g/r|g/s|g/th|/g/ti|g/w">
+value="g/a|g/b|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/o|g/p|g/r|g/s|g/th|/g/ti|g/w">
 all regular web pages.
 </option>
 </select>
@@ -78,7 +77,7 @@ all regular web pages.
 </font>
 <br />
 <input type="checkbox" name="restrict"
-value="g/a|g/bu|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/p|g/r|g/s|g/ti|g/th|g/w" />
+value="g/a|g/b|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/p|g/r|g/s|g/ti|g/th|g/w" />
 "Main" <a href="index.html">GCC</a>&nbsp;
 <input type="checkbox" name="restrict" value="g/o" />
 <a href="onlinedocs/">
@@ -86,10 +85,7 @@ Documentation
 </a>&nbsp;
 <input type="checkbox" name="restrict" value="g/te" />
 <a href="http://gcc.gnu.org/testresults/">
-Test results</a>&nbsp;
-<input type="checkbox" name="restrict" value="g/be" />
-<a href="http://gcc.gnu.org/benchresults/">
-Benchmark results</a>
+Test results</a>
 <br />
 <p>
 <font size="-1">
