--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -66,7 +66,7 @@ the test suite directories.</p>
       RTL consistency checks enabled.  This slows the compiler down by an
       order of magnitude but has found plenty of bugs in the past.</li>
   <li>Set up an autobuilder (see
-      <a href="http://people.redhat.com/geoffk/gcc-regression/">
+      <a href="http://gcc.gnu.org/regress/">
       gcc-regression</a>) to nag people in e-mail when they submit
       patches that break builds.  Ideally we would have one of these
       for at least each of the primary evaluation platforms listed in
@@ -75,7 +75,8 @@ the test suite directories.</p>
       ghazi@caip.rutgers.edu</a>&gt; suggests that the autobuilders
       should keep track of regressions in the number of warnings and nag
       patchers until the new warnings are fixed, just as for testsuite
-      regressions.</li>
+      regressions.  It's important to have the autobuilders coordinate
+      with each other, to avoid flooding contributors with mail.</li>
   <li>Build and test some or all of the following applications, some of
       which are part of the GCC release criteria.  If the instructions
       are incomplete for your target, update them.  Additions to this
