Fix typo in previous commit.

--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -66,7 +66,7 @@ the test suite directories.</p>
       RTL consistency checks enabled.  This slows the compiler down by an
       order of magnitude but has found plenty of bugs in the past.</li>
   <li>Set up an autobuilder (see
-      <a href="http://gcc.gnu.org/regress/">
+      <a href="http://gcc.gnu.org/regtest/">
       gcc-regression</a>) to nag people in e-mail when they submit
       patches that break builds.  Ideally we would have one of these
       for at least each of the primary evaluation platforms listed in
