2003-04-03  Janis Johnson  <janis187@us.ibm.com>
	* .htaccess: Redirect links for build and test guides.
	* testing/index.html: Remove URLs and version numbers from apps table.
	* testing/testing-blitz.html: Add URL to Blitz++ info.
	* testing/testing-boost.html: Add URL to Boost info, replace source
	URL, and reference version 1.30.0.
	* testing/testing-ftensor.html: Add URL to FTensor info.
	* testing/testing-lapack.html: Add URL to LAPACK info.
	* testing/testing-pooma.html: Add URLs to Qt info and sources.
	* testing/testing-qt.html: Add URL to Qt info.
	* gcc-3.3/criteria.html: Remove URLs and version numbers from apps
	table.
	* gcc-3.1/criteria.html: Remove URLs and version numbers from apps
	table, reference build and test guides in testing/.
	* gcc-3.1/testing-blitz.html: Delete file.
	* gcc-3.1/testing-boost.html: Delete file.
	* gcc-3.1/testing-ftensor.html: Delete file.
	* gcc-3.1/testing-lapack.html: Delete file.
	* gcc-3.1/testing-pooma.html: Delete file.
	* gcc-3.1/testing-qt.html: Delete file.

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -191,7 +191,9 @@ report possible problems.</p>
 <p>It is important that the compiler is verified on real-world
 applications.  The following applications represent a mix of low-level
 and high-level code, of numerical and logical programs, and of
-different programming languages.</p>
+different programming languages.  Build and test guides include links
+to general information about a package and a source URL.  Versions
+shown here are used for GCC 3.1 integration testing.</p>
 
 <table align="center" border="1">
 <caption>Integration Tests</caption>
@@ -208,24 +210,23 @@ different programming languages.</p>
         ACE (download)</a></td>
     <td>&nbsp;</td>
 </tr>
-<tr><td><a href="http://www.oonumerics.org/blitz/">Blitz</a></td>
+<tr><td>Blitz</td>
     <td>C++</td>
     <td>20001213</td>
-    <td><a href="http://www.oonumerics.org/blitz/download/snapshots/blitz-20001213.tar.gz">blitz-20001213.tar.gz</a></td>
-    <td><a href="testing-blitz.html">build and test guide</a></td>
+    <td>&nbsp;</td>
+    <td><a href="../testing/testing-blitz.html">build and test guide</a></td>
 </tr>
-<tr><td><a href="http://www.boost.org/">Boost</a></td>
+<tr><td>Boost</td>
     <td>C++</td>
     <td>1.22.0</td> <!-- the download link they give here isn't versioned... -->
-    <td><a href="http://www.boost.org/boost_all.tar.gz">boost_all.tar.gz</a></td>
-    <td><a href="testing-boost.html">build and test guide</a></td>
+    <td>&nbsp;</td>
+    <td><a href="../testing/testing-boost.html">build and test guide</a></td>
 </tr>
-<tr><td><a href="http://superbeast.ucsd.edu/~landry/FTensor/">FTensor</a></td>
+<tr><td>FTensor</td>
     <td>C++</td>
     <td>1.1 patch 16</td>
-    <td><a href="http://www.oonumerics.org/FTensor/FTensor_gcc_integration_test.tar.gz">
-         FTensor_gcc_integration_test.tar.gz</a></td>
-    <td><a href="testing-ftensor.html">build and test guide</a></td>
+    <td>&nbsp;</td>
+    <td><a href="../testing/testing-ftensor.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a></td>
     <td>C</td>
@@ -233,11 +234,11 @@ different programming languages.</p>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
 </tr>
-<tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a></td>
+<tr><td>LAPACK</td>
     <td>Fortran</td>
     <td>3.0</td>
-    <td><a href="http://www.netlib.org/lapack/lapack.tgz">LAPACK (testing programs)</a></td>
-    <td><a href="testing-lapack.html">build and test guide</a></td>
+    <td>&nbsp;</td>
+    <td><a href="../testing/testing-lapack.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://www.kernel.org">Linux kernel</a></td>
     <td>C</td>
@@ -254,17 +255,17 @@ different programming languages.</p>
         MTL (Download)</a>, with <a href="http://www.osl.iu.edu/MailArchives/mtl-devel/msg00311.php">patch</a></td>
     <td>&nbsp;</td>
 </tr>
-<tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a></td>
+<tr><td>POOMA</td>
     <td>C++</td>
     <td>2.3.0</td>
-    <td><a href="ftp://gcc.gnu.org/pub/gcc/infrastructure/pooma-gcc.tar.gz">pooma-gcc.tar.gz</a></td>
-    <td><a href="testing-pooma.html">build and test guide</a></td>
+    <td>&nbsp;</td>
+    <td><a href="../testing/testing-pooma.html">build and test guide</a></td>
 </tr>
-<tr><td><a href="http://www.trolltech.com/products/qt/index.html">Qt</a></td>
+<tr><td>Qt</td>
     <td>C++</td>
     <td>2.3.0</td>
-    <td><a href="ftp://ftp.trolltech.com/qt/source/qt-x11-2.3.0.tar.gz">qt-x11-2.3.0.tar.gz</a></td>
-    <td><a href="testing-qt.html">build and test guide</a></td>
+    <td>&nbsp;</td>
+    <td><a href="../testing/testing-qt.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://root.cern.ch/">root</a></td>
     <td>C++</td>
