--- a/htdocs/testing/testing-boost.html
+++ b/htdocs/testing/testing-boost.html
@@ -8,14 +8,15 @@
 <h1>Boost build and test guide</h1>
 
 <p>This page is a guide to running the testing and timing programs for the
-Boost class libraries as part of GCC integration testing.</p>
+<a href="http://www.boost.org/">Boost</a> class libraries as part of
+GCC integration testing.</p>
 
 <h2>Resource usage</h2>
 
-<p>The Boost distribution, available at the Boost site at
-<a href="http://www.boost.org/boost_all.tar.gz">boost_all.tar.gz</a>,
-is a 3.8 MB file.
-The uncompressed distribution comprises some 16 MB of source files.
+<p>Boost distributions are available from SourceForge, linked from the
+<a href="http://www.boost.org/more/download.html">Boost download page</a>.
+These instructions are for verion 1.27.0, whose gzipped tar file is
+3.8 MB.  The uncompressed distribution comprises some 16 MB of source files.
 Building the library and tests adds between 80 and 140 MB of
 object files and executables to this.</p>
 
@@ -29,7 +30,7 @@ minutes.</p>
 <ul>
 <li>Unpack the file:
 <ul>
-<li><code>tar zxf boost_all.tar.gz</code>, or</li>
+<li><code>tar zxf boost_1_27_0.tar.gz</code>, or</li>
 <li><code>gunzip -c boost_all.tar.gz | tar xf -</code></li>
 </ul>
 </li>
