--- a/htdocs/testing/testing-pooma.html
+++ b/htdocs/testing/testing-pooma.html
@@ -7,12 +7,16 @@
 <body>
 <h1>POOMA build and test guide</h1>
 
-<p>This page is a guide to building the POOMA parallel object-oriented
-code and running its test programs.</p>
+<p>This page is a guide to building the
+<a href="http://www.acl.lanl.gov/pooma/">POOMA</a>
+parallel object-oriented code and running its test programs.</p>
 
 <h2>Download and Extract</h2>
 
-<p>It is assumed that you already downloaded the POOMA code.</p>
+<p>A version of the POOMA distribution with a script for testing with
+GCC is available at 
+<a href="ftp://gcc.gnu.org/pub/gcc/infrastructure/pooma-gcc.tar.gz">
+pooma-gcc.tar.gz</a>.</p>
 
 <p>To configure the source code, compile the source code and example
 programs, and run the examples, use:</p>
