--- a/htdocs/gcc-3.3/criteria.html
+++ b/htdocs/gcc-3.3/criteria.html
@@ -189,7 +189,9 @@ report possible problems.</p>
 <p>It is important that the compiler is verified on real-world
 applications.  The following applications represent a mix of low-level
 and high-level code, of numerical and logical programs, and of
-different programming languages.</p>
+different programming languages.  Build and test guides include links
+to general information about a package and a source URL.  Versions
+shown here are used for GCC 3.3 integration testing.</p>
 
 <table align="center" border="1">
 <caption>Integration Tests</caption>
@@ -206,23 +208,22 @@ different programming languages.</p>
         ACE (download)</a></td>
     <td>&nbsp;</td>
 </tr>
-<tr><td><a href="http://www.oonumerics.org/blitz/">Blitz</a></td>
+<tr><td>Blitz</td>
     <td>C++</td>
     <td>20001213</td>
-    <td><a href="http://www.oonumerics.org/blitz/download/snapshots/blitz-20001213.tar.gz">blitz-20001213.tar.gz</a></td>
+    <td>&nbsp;</td>
     <td><a href="../testing/testing-blitz.html">build and test guide</a></td>
 </tr>
-<tr><td><a href="http://www.boost.org/">Boost</a></td>
+<tr><td>Boost</td>
     <td>C++</td>
     <td>1.22.0</td> <!-- the download link they give here isn't versioned... -->
-    <td><a href="http://www.boost.org/boost_all.tar.gz">boost_all.tar.gz</a></td>
+    <td>&nbsp;</td>
     <td><a href="../testing/testing-boost.html">build and test guide</a></td>
 </tr>
-<tr><td><a href="http://www.oonumerics.org/FTensor/">FTensor</a></td>
+<tr><td>FTensor</td>
     <td>C++</td>
     <td>1.1 pre22</td>
-    <td><a href="http://www.oonumerics.org/FTensor/FTensor-1.1pre22.tar.gz">
-         FTensor-1.1pre22.tar.gz</a></td>
+    <td>&nbsp;</td>
     <td><a href="../testing/testing-ftensor.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a></td>
@@ -231,10 +232,10 @@ different programming languages.</p>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
 </tr>
-<tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a></td>
+<tr><td>LAPACK</td>
     <td>Fortran</td>
     <td>3.0</td>
-    <td><a href="http://www.netlib.org/lapack/lapack.tgz">LAPACK (testing programs)</a></td>
+    <td>&nbsp;</td>
     <td><a href="../testing/testing-lapack.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://www.kernel.org">Linux kernel</a></td>
@@ -252,16 +253,16 @@ different programming languages.</p>
         MTL (Download)</a>, with <a href="http://www.osl.iu.edu/MailArchives/mtl-devel/msg00311.php">patch</a></td>
     <td>&nbsp;</td>
 </tr>
-<tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a></td>
+<tr><td>POOMA</td>
     <td>C++</td>
     <td>2.3.0</td>
-    <td><a href="ftp://gcc.gnu.org/pub/gcc/infrastructure/pooma-gcc.tar.gz">pooma-gcc.tar.gz</a></td>
+    <td>&nbsp;</td>
     <td><a href="../testing/testing-pooma.html">build and test guide</a></td>
 </tr>
-<tr><td><a href="http://www.trolltech.com/products/qt/index.html">Qt</a></td>
+<tr><td>Qt</td>
     <td>C++</td>
     <td>2.3.0</td>
-    <td><a href="ftp://ftp.trolltech.com/qt/source/qt-x11-2.3.0.tar.gz">qt-x11-2.3.0.tar.gz</a></td>
+    <td>&nbsp;</td>
     <td><a href="../testing/testing-qt.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://root.cern.ch/">root</a></td>
