--- a/htdocs/testing/testing-blitz.html
+++ b/htdocs/testing/testing-blitz.html
@@ -7,8 +7,9 @@
 <body>
 <h1>Blitz++ build and test guide</h1>
 
-<p>This page is a guide to building the Blitz++ scientific computing class
-library as part of GCC integration testing.</p>
+<p>This page is a guide to building the
+<a href="http://www.oonumerics.org/blitz/">Blitz++</a> scientific
+computing class library as part of GCC integration testing.</p>
 
 <h2>Resource usage</h2>
 
