--- a/htdocs/testing/testing-ftensor.html
+++ b/htdocs/testing/testing-ftensor.html
@@ -8,7 +8,8 @@
 <h1>FTensor build and test guide</h1>
 
 <p>This page is a guide to running the testing and timing programs for the
-FTensor tensor class library as part of GCC integration testing.  FTensor
+<a href="http://www.oonumerics.org/FTensor/">FTensor</a>
+tensor class library as part of GCC integration testing.  FTensor
 can be built with GCC version 3.1 and later.</p>
 
 <h2>Resource usage</h2>
