--- a/htdocs/testing/testing-lapack.html
+++ b/htdocs/testing/testing-lapack.html
@@ -7,8 +7,9 @@
 <body>
 <h1>LAPACK build and test guide</h1>
 
-<p>This page is a guide to building the LAPACK linear algebra
-package and running its testing and timing programs as part of
+<p>This page is a guide to building the
+<a href="http://www.netlib.org/lapack/index.html">LAPACK</a> linear
+algebra package and running its testing and timing programs as part of
 GCC integration testing.</p>
 
 <h2>Resource usage</h2>
