--- a/htdocs/testing/testing-qt.html
+++ b/htdocs/testing/testing-qt.html
@@ -7,8 +7,9 @@
 <body>
 <h1>Qt build and test guide</h1>
 
-<p>This page is a guide to building the Qt application development toolkit
-as part of GCC integration testing.</p>
+<p>This page is a guide to building the
+<a href="http://www.trolltech.com/products/qt/index.html">Qt</a>
+application development toolkit as part of GCC integration testing.</p>
 
 <h2>Resource usage</h2>
 
