Fix two broken relative URLs. By Kelly Cook <kcook34@ford.com>.

--- a/htdocs/bugs/reghunt.html
+++ b/htdocs/bugs/reghunt.html
@@ -65,7 +65,7 @@ are simple to <a href="#problems">work around</a>.</p>
 
 <h2><a name="get">Get GCC sources</a></h2>
 
-<p>Get a local CVS tree using the <a href="cvs.html">cvs instructions</a>.
+<p>Get a local CVS tree using the <a href="../cvs.html">cvs instructions</a>.
 Use a read-only tree that is separate from what you use for development or
 other testing, since it's easy to end up with files in strange states.</p>
 
@@ -77,7 +77,7 @@ for the regression search over and over again and won't want to affect
 access times for other GCC developers who are using the real repository,
 and it will also be faster for you.</p>
 
-<p>Follow the <a href="rsync.html">rsync instructions</a>.  The full tree
+<p>Follow the <a href="../rsync.html">rsync instructions</a>.  The full tree
 takes a lot of disk space, but it's possible to exclude directories you
 won't need for your hunt.  If you're already using rsync, see the
 <a href="#shortcuts">short cuts</a> below for making a smaller copy.</p>
