--- a/htdocs/projects/cxx-reflection/index.html
+++ b/htdocs/projects/cxx-reflection/index.html
@@ -62,7 +62,7 @@ for it.</p>
 latest merge tag is always added to GCC's version string.  A merge may
 be postponed if there is major breakage in mainline.</p>
 
-<p>Work from the branch will be incorporated into mainline only if 
+<p>Work from the branch will be incorporated into mainline only if</p>
 <ol> 
 <li>it can be proved that it provides better way to implement an
 existing standard feature; or</li>
