--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -90,7 +90,7 @@ to maintain and improve quality.</p>
 <dt><b>January 29, 2003</b></dt>
 
 <dd>
-Andrew Haley of Red Hat completed the work began by Bo Thorsen of SuSE
+Andrew Haley of Red Hat completed the work begun by Bo Thorsen of SuSE
 to port <a href="java/">GCJ</a> to the AMD x86-64
 architecture.  This is the first implementation of the Java
 programming language to be made available on that platform.  It will
