--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -100,7 +100,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>alphaev67-dec-osf5.1</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00273.html">3.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00273.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-03/msg01373.html">3.2.1</a></td>
 </tr>
 
 <tr>
@@ -324,6 +325,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu</td>
+<td>SuSE 6.3, glibc 2.1.2, kernel 2.2.13, recent binutils</td>
+<td>Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00152.html">3.2.2</a></td>
+</tr>
+
+<tr>
 <td>i586-pc-msdosdjgpp</td>
 <td>MS-DOS session under Win98SE</td>
 <td>Successful (Ada, C, C++, F77, Obj-C; with tweaks):
@@ -465,6 +473,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.1, glibc 2.2.4, kernel 2.4.8</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00336.html">3.2.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Mandrake 8.2, glibc 2.2.4, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01378.html">3.2</a>,
@@ -484,6 +499,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 6.2, glibc 2.1.3, kernel 2.4.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-10/msg00937.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.0, glibc 2.2.4, kernel 2.4.20</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00543.html">3.2.2</a></td>
 </tr>
 
 <tr>
@@ -660,6 +682,13 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00483.html">3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00698.html">3.2.1</a>
 </td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 7.2, glibc 2.2.4, kernel 2.4.20</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-03/msg01415.html">3.2.2</a></td>
 </tr>
 
 <tr>
@@ -1085,6 +1114,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01082.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Successful (with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2003-04/msg00213.html">3.2.2</a></td>
 </tr>
 
 <tr>
