Update the sizeos of huge files.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -159,22 +159,22 @@ be done with the maintainers of those files.</p>
 targets:</p>
 
 <pre>
-	472k java/parse.y
-	440k cp/decl.c
-	428k combine.c
-	356k dwarf2out.c
-	336k expr.c
-	308k cp/pt.c
-	300k loop.c
-	248k cp/class.c
-	244k cse.c
-	240k flow.c
-	232k fold-const.c
-	228k c-decl.c
-	224k function.c
-	220k cp/typeck.c
-	220k c-typeck.c
-	204k dwarfout.c
+	487K java/parse.y
+	438K combine.c
+	436K cp/decl.c
+	382K dwarf2out.c
+	343K cp/pt.c
+	325K loop.c
+	319K expr.c
+	252K fold-const.c
+	241K cp/class.c
+	240K function.c
+	236K cse.c
+	225K dwarfout.c
+	216K c-typeck.c
+	211K c-decl.c
+	205K cp/typeck.c
+	128K flow.c
 </pre>
 
 <p>There are several other files in this size range, which I have left
