Clarify varargs.h/-traditional situation

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -53,7 +53,10 @@
 
     <li>The <code>-traditional</code> C compiler option has been
         removed.  It was deprecated in 3.1 and 3.2.  (Traditional
-        preprocessing remains available.)</li>
+        preprocessing remains available.)  The
+        <code>&lt;varargs.h&gt;</code> header, used for writing
+	variadic functions in traditional C, still exists but will
+	produce an error message if used.</li>
   </ul>
 
 
