--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -22,11 +22,8 @@
     <li>GCC no longer accepts the options <code>-fvolatile</code>,
 	<code>-fvolatile-global</code> and <code>-fvolatile-static</code>.
 	It is unlikely that they worked correctly in any 3.x release.</li>
-    <li>GCC no longer supports the use of <code>&lt;varargs.h&gt;</code>
-        and does not provide this header with the distribution.  Use
-        <code>&lt;stdarg.h&gt;</code> instead.  (This header is primarily
-        useful with traditional mode compilation, which feature was removed
-        in GCC 3.3.)
+    <li>GCC no longer ships <code>&lt;varargs.h&gt;</code>.  Use
+        <code>&lt;stdarg.h&gt;</code> instead.</li>
   </ul>
 
 <h2>General Optimizer Improvements</h2>
