* libgcj2.html: Remove broken (and obsolete) download reference. 	* old-news.html: Remove broken link to test.html.

--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -53,7 +53,7 @@ Modifications have been made to <tt>mauve.exp</tt> to copy the newly created
 to the directory where the libjava <tt>'make check'</tt> is being run.  
 This allows the testsuite to ignore <tt>XFAIL</tt>s and thus highlight
 true regressions in the library.  The Mauve tests are
-<a href="test.html">automatically run</a> as part of a libjava
+automatically run as part of a libjava
 <tt>'make check'</tt> as long as the Mauve suite is accessible
 and the env var <tt>MAUVEDIR</tt> is set to point to the top-level
 of the <a href="http://sources.redhat.com/mauve/download.html">Mauve source</a>.
