Fix links to two referenced papers that moved.

--- a/htdocs/projects/prefetch.html
+++ b/htdocs/projects/prefetch.html
@@ -872,11 +872,15 @@ http://www.sun.com/microelectronics/manuals/#processors</a>.</p>
 
 <p>References to uses of data prefetch instructions:</p>
 
-<p><a name="ref_21">[21]</a>
+<p><a name="ref_21a">[21a]</a>
 <em>Compiler Writer's Guide for the Alpha 21264</em>,
-Order Number EC-RJ66A-TE, June 1999;
-<a href="http://www.support.compaq.com/alpha-tools/documentation/current/21264_EV67/ec-rj66a-te_comp_writ_gde_for_alpha21264.pdf">
-http://www.support.compaq.com/alpha-tools/documentation/current/21264_EV67/ec-rj66a-te_comp_writ_gde_for_alpha21264.pdf</a>.</p>
+Order Number EC-RJ66A-TE, June 1999.</p>
+
+<p><a name="ref_21b">[21b]</a>
+<em>Compiler Writer's Guide for the 21264/21364</em>,
+Order Number EC-0100A-TE, January 2002;
+<a href="http://www.support.compaq.com/alpha-tools/documentation/current/21364/comp_guide_v2.pdf">
+http://www.support.compaq.com/alpha-tools/documentation/current/21364/comp_guide_v2.pdf</a>.</p>
 
 <p><a name="ref_22">[22]</a>
 <em>Compiler-Based Prefetching for Recursive Data Structures</em>,
@@ -910,9 +914,8 @@ http://developer.intel.com/technology/itj/q41999/articles/art_1h.htm</a></p>
 
 <p><a name="ref_26">[26]</a>
 <em>UltraSPARC[tm]-II Enhancements: Support for Software Controlled
-Prefetch</em>, Sun Microsystems, WPR-0002;
-<a href="http://www.sun.com/microelectronics/whitepapers/wpr-0002/">
-http://www.sun.com/microelectronics/whitepapers/wpr-0002/</a>.</p>
+Prefetch</em>, Sun Microsystems, July 1996, WPR-0002;
+<a href="http://solutions.sun.com/embedded/databook/pdf/whitepapers/WPR-0002-01.pdf">http://solutions.sun.com/embedded/databook/pdf/whitepapers/WPR-0002-01.pdf</a>.</p>
 
 </body>
 </html>
